added menu function...

--- a/src/app/components/search-bar/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar/search-bar.component.html
@@ -6,7 +6,5 @@
     id="text"
     placeholder="Search"
   />
-  <!--<button class="btn" type="button" id="button" (click)="searchRes()">
-    Search
-  </button>-->
+  <fa-icon (click)="searchRes()" [icon]="faMG"></fa-icon>
 </div>
