--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <div class="container">
   <app-header> </app-header>
 </div>
+<div class="container" [ngStyle]="{ background: 'white' }">
+  //to do add a body here <br />
+  //further to do, adjust menu opening here
+</div>
+
+<div class="container" [ngStyle]="{ justfy: 'end' }">
+  //to do put footer here
+</div>
