--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-  <app-header> </app-header>
-  <br />
+<div id="tops">
+  <div class="container" id="header">
+    <app-header> </app-header>
+    <br />
+  </div>
+  <div class="container" id="body">
+    <app-body></app-body>
+  </div>
 </div>
-<div class="container" [ngStyle]="{ background: 'white' }">
-  //to do add a body here <br />
-  //further to do, adjust menu opening here
-</div>
-
-<div class="container">//to do put footer here</div>
+<div class="container" id="footer"><app-footer> </app-footer></div>
