--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <br />
   </div>
   <div class="container" id="body">
-    <app-body></app-body>
+    <app-parking></app-parking>
   </div>
 </div>
 <div class="container" id="footer"><app-footer> </app-footer></div>
