--- a/src/app/components/parking/parking.component.css
+++ b/src/app/components/parking/parking.component.css
@@ -1,4 +1,13 @@
-.searchpark{
-    height: 60px !important;
-    margin-left: 200px;
+.searchpark {
+  height: 60px !important;
+  margin-left: 200px;
+}
+form {
+  border: black 2px solid;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
