--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,4 @@
 .headerItems {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
   align-items: end;
-  margin-top: -10px;
+  margin-bottom: -29px;
 }
