--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,14 @@
-<nav class="nav">
-  <a class="nav-link active" aria-current="page" routerLink="">Home</a>
-  <a class="nav-link" routerLink="#">Settings</a>
-  <a class="nav-link" routerLink="#">Help</a>
-  <a class="nav-link" routerLink="#">Log out</a>
-</nav>
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Settings</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Profile</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#" tabindex="-1">Log Out</a>
+  </li>
+</ul>
