--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div>
     Follow us:
     <ul>
-      <li>Facebook</li>
-      <li>Instagram</li>
+      <li><a href=""> Facebook </a></li>
+      <li><a href="">Instagram </a></li>
     </ul>
   </div>
 </div>
