--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,13 @@
 ul {
   display: flex;
   flex: row;
-  justify-items: left;
   justify-content: space-around;
+}
+div {
+  text-align: center;
+  font-size: 20px;
+}
+a {
+  text-align: none;
+  color: black;
 }
